PUG-099: Simplified the exception handling and made stuff clearer;